# turboai-notes

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  render.yaml  script.md
.github/workflows/: format.yml  lint.yml  release.yml  test.yml
backend/: .dockerignore  .flake8  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
backend/apps/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_user_email_unique.py
backend/apps/notes/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py  0002_alter_category_color_alter_note_content_and_more.py
backend/config/: settings.py  urls.py
docs/: plan.md  transcript.txt
frontend/: CLAUDE.md  Dockerfile  eslint.config.mjs  jest.config.ts  package-lock.json  package.json
frontend/.claude/rules/: use-effect.md
frontend/src/: types.ts
frontend/src/__tests__/: AuthContext.test.tsx  NoteEditor.test.tsx  Sidebar.test.tsx  api.test.ts  useCategories.test.ts  useNotes.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/notes/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/src/components/notes/: EmptyState.tsx  NoteCard.tsx  NoteEditor.tsx  (+3 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAutoSave.ts  useCategories.ts  useNotes.ts
frontend/src/lib/: api.ts  formatDate.ts
frontend/src/types/: index.ts
scripts/: backend.sh  frontend.sh
