[project]
name = "turboai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.4",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "django-cors-headers==4.3.1",
    "python-dotenv==1.0.1",
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7",
]

[tool.black]
line-length = 119
target-version = ["py312"]
